--- a/android/src/main/AndroidManifest.xml
+++ b/android/src/main/AndroidManifest.xml
@@ -1,3 +1,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android" package="com.cactuslab.plugins.securecredentials">
     <uses-permission android:name="android.permission.USE_BIOMETRIC" />
+    <application>
+        <activity android:name=".AuthActivity"/>
+    </application>
 </manifest>
