--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "@capacitor/core": "next",
     "@capacitor/docgen": "^0.0.10",
     "@capacitor/ios": "next",
+    "@changesets/cli": "^2.25.2",
     "@ionic/eslint-config": "^0.3.0",
     "@ionic/prettier-config": "^1.0.1",
     "@ionic/swiftlint-config": "^1.1.2",
