--- a/package.json
+++ b/package.json
@@ -44,21 +44,21 @@
     "prepublishOnly": "npm run build"
   },
   "devDependencies": {
-    "@capacitor/android": "next",
-    "@capacitor/core": "next",
-    "@capacitor/docgen": "^0.0.10",
-    "@capacitor/ios": "next",
+    "@capacitor/android": "^4.6.1",
+    "@capacitor/core": "^4.6.1",
+    "@capacitor/docgen": "^0.2.0",
+    "@capacitor/ios": "^4.6.1",
     "@changesets/cli": "^2.25.2",
     "@ionic/eslint-config": "^0.3.0",
-    "@ionic/prettier-config": "^1.0.1",
+    "@ionic/prettier-config": "^2.0.0",
     "@ionic/swiftlint-config": "^1.1.2",
-    "eslint": "^7.11.0",
-    "prettier": "~2.2.0",
-    "prettier-plugin-java": "~1.0.0",
+    "eslint": "^8.29.0",
+    "prettier": "~2.8.1",
+    "prettier-plugin-java": "~2.0.0",
     "rimraf": "^3.0.2",
-    "rollup": "^2.32.0",
+    "rollup": "^3.7.3",
     "swiftlint": "^1.0.1",
-    "typescript": "~4.0.3"
+    "typescript": "~4.9.4"
   },
   "peerDependencies": {
     "@capacitor/core": "next"
