--- a/package.json
+++ b/package.json
@@ -44,10 +44,10 @@
     "prepublishOnly": "npm run build"
   },
   "devDependencies": {
-    "@capacitor/android": "^4.6.1",
-    "@capacitor/core": "^4.6.1",
+    "@capacitor/android": "^5.0.0",
+    "@capacitor/core": "^5.0.0",
     "@capacitor/docgen": "^0.2.0",
-    "@capacitor/ios": "^4.6.1",
+    "@capacitor/ios": "^5.0.0",
     "@changesets/cli": "^2.25.2",
     "@ionic/eslint-config": "^0.3.0",
     "@ionic/prettier-config": "^2.0.0",
@@ -61,7 +61,7 @@
     "typescript": "~4.9.4"
   },
   "peerDependencies": {
-    "@capacitor/core": "next"
+    "@capacitor/core": "^5.0.0"
   },
   "prettier": "@ionic/prettier-config",
   "swiftlint": "@ionic/swiftlint-config",
